# rrecord-verity

./: .gitignore  .guix-channel  0-AI-MANIFEST.a2ml  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  LICENSE.txt  MAINTAINERS.md  MANUAL_REVIEW_NEEDED.md  META.scm  NEUROSYM.scm  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  ROADMAP.md  RSR_COMPLIANCE.adoc  RuntimeMessage.d.ts  SECURITY.md  STATE.scm  TEST-NEEDS.md  THIRDPARTY_LICENSE.txt  TOPOLOGY.md  WebExtensions.d.ts  codemeta.json  deno.json  flake.nix  guix.scm  justfile  llm-warmup-dev.md  llm-warmup-user.md  package-lock.json  (+3 more)
.github/: dependabot.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.a2ml  INTENT.contractile  META.a2ml  MUST.contractile  STATE.a2ml  TRUST.contractile
.well-known/: ai.txt  dc.xml  humans.txt  security.txt
_locales/: Readme.md
content/: background.mjs.js  displayAction.mjs.js  domUtils.mjs.js  keysView.mjs.js  options.mjs.js  signRulesDefaultsView.mjs.js  signRulesUserAdd.mjs.js  signRulesUserView.mjs.js  translation.mjs.js
data/: signersDefault-schema.json
docs/: CITATIONS.adoc  tech-debt-2026-05-26.md
experiments/: ctypes.d.ts  dkimHeader.d.ts  dkimHeader.js  jsdns.d.ts  jsdns.js  libunbound.d.ts  libunbound.js  libunboundWorker.js  mailUtils.d.ts  mailUtils.js  mozilla.d.ts  (+3 more)
wasm/crypto/: Cargo.toml
wasm/crypto/src/: lib.rs
wasm/parser/: Cargo.toml
wasm/parser/src/: lib.rs
(+100 files in other folders)
