[package]
name = "dkim-crypto-wasm"
version = "0.1.0"
edition = "2021"
authors = ["DKIM Verifier Contributors"]
description = "WebAssembly cryptographic operations for DKIM Verifier"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Cryptographic libraries
sha2 = "0.10"
rsa = "0.9"
ed25519-dalek = "2.0"
base64 = "0.21"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
