[package]
name = "dkim-parser-wasm"
version = "0.1.0"
edition = "2021"
authors = ["DKIM Verifier Contributors"]
description = "WebAssembly email parser for DKIM Verifier"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Email parsing
regex = "1.10"
lazy_static = "1.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
